--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "update-staging": "yarn upgrade @carbon/ibmdotcom-react@latest && yarn upgrade @carbon/ibmdotcom-styles@latest"
   },
   "dependencies": {
-    "@carbon/ibmdotcom-react": "^1.7.0-alpha.3916",
-    "@carbon/ibmdotcom-styles": "^1.7.0-alpha.3916",
+    "@carbon/ibmdotcom-react": "^1.8.0-rc.3",
+    "@carbon/ibmdotcom-styles": "^1.8.0-rc.2",
     "@carbon/icons-react": "^10.9.1",
     "@carbon/pictograms-react": "^10.9.0",
     "@commitlint/cli": "^8.3.5",
