--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint-plugin-react-hooks": "^3.0.0",
     "eslint-plugin-tree-shaking": "^1.8.0",
     "express": "^4.17.1",
+    "fast-sass-loader": "1.5.0",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.5",
     "next": "9.3.2",
