--- a/package.json
+++ b/package.json
@@ -1,6 +1,12 @@
 {
   "name": "ibm-dotcom-library-nextjs-template",
   "private": true,
+  "version": "0.0.0",
+  "repository": "git@github.com:carbon-design-system/ibm-dotcom-library-nextjs-template.git",
+  "license": "Apache-2.0",
+  "engines": {
+    "node": "12.x"
+  },
   "workspaces": {
     "packages": [
       "packages/*"
