--- a/package.json
+++ b/package.json
@@ -20,17 +20,17 @@
     "build-export": "next build && next export",
     "lint": "eslint pages",
     "lint:styles": "stylelint '**/*.{css,scss}' --config ./packages/stylelint-config-ibmdotcom",
-    "update": "yarn upgrade @carbon/ibmdotcom-react@canary && yarn upgrade @carbon/ibmdotcom-styles@canary",
-    "update-staging": "yarn upgrade @carbon/ibmdotcom-react@latest && yarn upgrade @carbon/ibmdotcom-styles@latest"
+    "update-canary": "yarn upgrade @carbon/ibmdotcom-react@canary && yarn upgrade @carbon/ibmdotcom-styles@canary",
+    "update-next": "yarn upgrade @carbon/ibmdotcom-react@next && yarn upgrade @carbon/ibmdotcom-styles@next",
+    "update-latest": "yarn upgrade @carbon/ibmdotcom-react@latest && yarn upgrade @carbon/ibmdotcom-styles@latest"
   },
   "dependencies": {
-    "@carbon/ibmdotcom-react": "^1.8.0",
-    "@carbon/ibmdotcom-styles": "^1.8.0",
+    "@carbon/ibmdotcom-react": "^1.10.0-rc.1",
+    "@carbon/ibmdotcom-styles": "^1.10.0-rc.1",
     "@carbon/icons-react": "^10.9.1",
     "@carbon/pictograms-react": "^10.9.0",
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
-    "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
     "dotenv": "^8.2.0",
     "eslint": "^6.0.1",
@@ -45,7 +45,6 @@
     "lint-staged": "^8.1.5",
     "next": "9.3.2",
     "next-compose-plugins": "^2.2.0",
-    "next-progressbar": "^1.0.0",
     "node-sass": "^4.13.0",
     "prettier": "^2.0.4",
     "prop-types": "^15.7.2",
