--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "update-latest": "yarn upgrade @carbon/ibmdotcom-react@latest && yarn upgrade @carbon/ibmdotcom-styles@latest"
   },
   "dependencies": {
-    "@carbon/ibmdotcom-react": "^1.10.1",
-    "@carbon/ibmdotcom-styles": "^1.10.1",
+    "@carbon/ibmdotcom-react": "^1.10.2-rc.1",
+    "@carbon/ibmdotcom-styles": "^1.10.1-rc.0",
     "@carbon/icons-react": "^10.9.1",
     "@carbon/pictograms-react": "^10.9.0",
     "@commitlint/cli": "^8.3.5",
