--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-CORS_PROXY=<Sets the proxy for fetching the masthead/footer translation data, e.g. https://myproxy.com/>
 BASE_PATH=<Sets the base directory for urls and assets, default is '.' >
 ALTLANG_ROOT_PATH=<Sets the root path for language alternative urls, default is '/' >
+ENABLE_RTL=<Boolean to enable RTL for the page, eg. false >
