--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "update-latest": "yarn upgrade @carbon/ibmdotcom-react@latest && yarn upgrade @carbon/ibmdotcom-styles@latest"
   },
   "dependencies": {
-    "@carbon/ibmdotcom-react": "^1.10.2-rc.2",
-    "@carbon/ibmdotcom-styles": "^1.10.1-rc.0",
+    "@carbon/ibmdotcom-react": "^1.11.0",
+    "@carbon/ibmdotcom-styles": "^1.11.0",
     "@carbon/icons-react": "^10.9.1",
     "@carbon/pictograms-react": "^10.9.0",
     "@commitlint/cli": "^8.3.5",
@@ -50,6 +50,7 @@
     "prop-types": "^15.7.2",
     "react": "16.11.0",
     "react-dom": "16.11.0",
+    "rtlcss": "^2.6.0",
     "stylelint": "^13.3.2",
     "webpack": "^4.41.5"
   },
