--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "ibm-dotcom-library-nextjs-template",
+  "name": "carbon-for-ibm-dotcom-nextjs-template",
   "private": true,
   "version": "0.0.0",
-  "repository": "git@github.com:carbon-design-system/ibm-dotcom-library-nextjs-template.git",
+  "repository": "git@github.com:carbon-design-system/carbon-for-ibm-dotcom-nextjs-template.git",
   "license": "Apache-2.0",
   "engines": {
     "node": "12.x"
@@ -50,6 +50,7 @@
     "prop-types": "^15.7.2",
     "react": "16.11.0",
     "react-dom": "16.11.0",
+    "rtlcss": "^2.6.0",
     "stylelint": "^13.3.2",
     "webpack": "^4.41.5"
   },
