--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "update-latest": "yarn upgrade @carbon/ibmdotcom-react@latest && yarn upgrade @carbon/ibmdotcom-styles@latest"
   },
   "dependencies": {
-    "@carbon/ibmdotcom-react": "^1.11.0",
-    "@carbon/ibmdotcom-styles": "^1.11.0",
+    "@carbon/ibmdotcom-react": "^1.12.0",
+    "@carbon/ibmdotcom-styles": "^1.12.0",
     "@carbon/icons-react": "^10.9.1",
     "@carbon/pictograms-react": "^10.9.0",
     "@commitlint/cli": "^8.3.5",
@@ -43,7 +43,7 @@
     "fast-sass-loader": "1.5.0",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.5",
-    "next": "^9.5.3",
+    "next": "9.5.5",
     "next-compose-plugins": "^2.2.0",
     "node-sass": "^4.13.0",
     "prettier": "^2.0.4",
@@ -55,6 +55,7 @@
     "webpack": "^4.41.5"
   },
   "resolutions": {
+    "object-path": ">=0.11.5",
     "serialize-javascript": ">= 3.1.0"
   }
 }
