--- a/package.json
+++ b/package.json
@@ -55,7 +55,9 @@
     "webpack": "^4.41.5"
   },
   "resolutions": {
+    "node-fetch": ">=2.6.1",
     "object-path": ">=0.11.5",
-    "serialize-javascript": ">= 3.1.0"
+    "serialize-javascript": ">= 3.1.0",
+    "yargs-parser": ">=13.1.2"
   }
 }
