--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
     "@zeit/next-sass": "^1.0.1",
+    "autoprefixer": "^10.0.1",
     "dotenv": "^8.2.0",
     "eslint": "^6.0.1",
     "eslint-plugin-jsdoc": "^23.0.0",
@@ -57,7 +58,6 @@
   "resolutions": {
     "node-fetch": ">=2.6.1",
     "object-path": ">=0.11.5",
-    "serialize-javascript": ">= 3.1.0",
-    "yargs-parser": ">=13.1.2"
+    "serialize-javascript": ">= 3.1.0"
   }
 }
