fix(autoprefixer): downgrading to autoprefixer to v9
v10 of autoprefixer does not work with postcss v8, so will keep this on
v9 of autoprefixer for now.

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
     "@zeit/next-sass": "^1.0.1",
-    "autoprefixer": "^10.0.1",
+    "autoprefixer": "9.8.6",
     "dotenv": "^8.2.0",
     "eslint": "^6.0.1",
     "eslint-plugin-jsdoc": "^23.0.0",
