chore(dependapot): upgrading commitlint and sub-dependency `dot-prop`
Dependabot notified of a security risk with versions of `dot-prop`
before v5.1.1. This is a dependency of commitlint, which the template
was running an older version of. While the latest version of commitlint
requires `dot-prop` version `5.1.0`, for now we will need to set a
resolution in our `package.json` until commitlint will upgrade the
dependency in their project.

--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "@carbon/ibmdotcom-styles": "^1.12.0",
     "@carbon/icons-react": "^10.9.1",
     "@carbon/pictograms-react": "^10.9.0",
-    "@commitlint/cli": "^8.3.5",
-    "@commitlint/config-conventional": "^8.3.4",
+    "@commitlint/cli": "^11.0.0",
+    "@commitlint/config-conventional": "^11.0.0",
     "@zeit/next-sass": "^1.0.1",
     "autoprefixer": "9.8.6",
     "dotenv": "^8.2.0",
@@ -56,6 +56,7 @@
     "webpack": "^4.41.5"
   },
   "resolutions": {
+    "dot-prop": ">=5.1.1",
     "node-fetch": ">=2.6.1",
     "object-path": ">=0.11.5",
     "serialize-javascript": ">= 3.1.0"
