--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "cross-env SASS_PATH=node_modules:src next build",
     "export": "next export",
     "start": "node server.js",
     "build-export": "next build && next export",
@@ -25,14 +25,20 @@
     "update-latest": "yarn upgrade @carbon/ibmdotcom-react@latest && yarn upgrade @carbon/ibmdotcom-styles@latest"
   },
   "dependencies": {
-    "@carbon/ibmdotcom-react": "^1.18.0",
-    "@carbon/ibmdotcom-styles": "^1.18.0",
+    "@carbon/ibmdotcom-react": "^1.16.0",
+    "@carbon/ibmdotcom-styles": "^1.16.0",
     "@carbon/icons-react": "^10.9.1",
     "@carbon/pictograms-react": "^10.9.0",
+    "@zeit/next-sass": "^1.0.1",
+    "express": "^4.17.1",
+    "next": "9.5.5",
+    "next-compose-plugins": "^2.2.0"
+  },
+  "devDependencies": {
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
-    "@zeit/next-sass": "^1.0.1",
     "autoprefixer": "9.8.6",
+    "cross-env": "7.0.3",
     "dotenv": "^8.2.0",
     "eslint": "^6.0.1",
     "eslint-plugin-jsdoc": "^23.0.0",
@@ -40,12 +46,9 @@
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^3.0.0",
     "eslint-plugin-tree-shaking": "^1.8.0",
-    "express": "^4.17.1",
     "fast-sass-loader": "1.5.0",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.5",
-    "next": "10.1.3",
-    "next-compose-plugins": "^2.2.0",
     "node-sass": "^4.13.0",
     "prettier": "^2.0.4",
     "prop-types": "^15.7.2",
