--- a/package.json
+++ b/package.json
@@ -28,16 +28,17 @@
     "@carbon/ibmdotcom-react": "^1.18.1",
     "@carbon/ibmdotcom-styles": "^1.18.1",
     "@carbon/icons-react": "^10.9.1",
-    "@carbon/pictograms-react": "^10.9.0"
+    "@carbon/pictograms-react": "^10.9.0",
+    "sass": "^1.37.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
-    "@zeit/next-sass": "^1.0.1",
     "autoprefixer": "9.8.6",
     "cross-env": "7.0.3",
     "dotenv": "^8.2.0",
-    "eslint": "^6.0.1",
+    "eslint": "^7.32.0",
+    "eslint-config-next": "^11.0.1",
     "eslint-plugin-jsdoc": "^23.0.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.19.0",
@@ -47,21 +48,23 @@
     "fast-sass-loader": "1.5.0",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.5",
-    "next": "10.1.3",
+    "next": "11.0.1",
     "next-compose-plugins": "^2.2.0",
-    "node-sass": "^4.13.0",
+    "postcss": "^8.3.6",
+    "postcss-loader": "^6.1.1",
     "prettier": "^2.0.4",
     "prop-types": "^15.7.2",
-    "react": "16.11.0",
-    "react-dom": "16.11.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "rtlcss": "^2.6.0",
-    "stylelint": "^13.3.2",
-    "webpack": "^4.41.5"
+    "sass-loader": "^12.1.0",
+    "stylelint": "^13.3.2"
   },
   "resolutions": {
     "dot-prop": ">=5.1.1",
     "node-fetch": ">=2.6.1",
     "object-path": ">=0.11.5",
     "serialize-javascript": ">= 3.1.0"
-  }
+  },
+  "browserlist": ["last 1 version", "ie >= 11"]
 }
