--- a/package.json
+++ b/package.json
@@ -25,10 +25,11 @@
     "update-latest": "yarn upgrade @carbon/ibmdotcom-react@latest && yarn upgrade @carbon/ibmdotcom-styles@latest"
   },
   "dependencies": {
-    "@carbon/ibmdotcom-react": "^1.18.1",
-    "@carbon/ibmdotcom-styles": "^1.18.1",
-    "@carbon/icons-react": "^10.9.1",
-    "@carbon/pictograms-react": "^10.9.0",
+    "@carbon/ibmdotcom-react": "^1.23.0",
+    "@carbon/ibmdotcom-styles": "^1.23.0",
+    "@carbon/icons-react": "^10.37.0",
+    "@carbon/pictograms-react": "^10.18.0",
+    "@carbon/type": "^10.33.0",
     "sass": "^1.37.0"
   },
   "devDependencies": {
@@ -45,7 +46,6 @@
     "eslint-plugin-react-hooks": "^3.0.0",
     "eslint-plugin-tree-shaking": "^1.8.0",
     "express": "^4.17.1",
-    "fast-sass-loader": "1.5.0",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.5",
     "next": "11.0.1",
@@ -65,6 +65,5 @@
     "node-fetch": ">=2.6.1",
     "object-path": ">=0.11.5",
     "serialize-javascript": ">= 3.1.0"
-  },
-  "browserlist": ["last 1 version", "ie >= 11"]
+  }
 }
