--- a/package.json
+++ b/package.json
@@ -51,7 +51,9 @@
     "next": "11.0.1",
     "next-compose-plugins": "^2.2.0",
     "postcss": "^8.3.6",
+    "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-loader": "^6.1.1",
+    "postcss-preset-env": "^6.7.0",
     "prettier": "^2.0.4",
     "prop-types": "^15.7.2",
     "react": "17.0.2",
