--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
   },
   "resolutions": {
     "dot-prop": ">=5.1.1",
-    "node-fetch": ">=2.6.1",
+    "node-fetch": "^2.6.1",
     "object-path": ">=0.11.5",
     "serialize-javascript": ">= 3.1.0"
   }
