chore(renovate): only run on non-office hours

--- a/renovate.json
+++ b/renovate.json
@@ -1,7 +1,9 @@
 {
   "extends": [
     "config:base",
-    ":maintainLockFilesWeekly"
+    ":maintainLockFilesWeekly",
+    ":preserveSemverRanges",
+    "schedule:nonOfficeHours"
   ],
   "rangeStrategy": "replace"
 }
