chore(renovate): prevent updates during business hours

--- a/renovate.json
+++ b/renovate.json
@@ -3,7 +3,8 @@
     "config:base",
     ":maintainLockFilesWeekly",
     ":preserveSemverRanges",
-    "schedule:nonOfficeHours"
+    "schedule:nonOfficeHours",
+    ":noUnscheduledUpdates"
   ],
   "rangeStrategy": "replace"
 }
