--- a/renovate.json
+++ b/renovate.json
@@ -3,7 +3,7 @@
     "config:base",
     ":maintainLockFilesWeekly",
     ":preserveSemverRanges",
-    "schedule:nonOfficeHours",
+    "schedule:weekends",
     ":noUnscheduledUpdates"
   ],
   "rangeStrategy": "replace"
